Minor code fixes, improve SendLogActivity, fix NPE in connect() when called from SendLogActivity, update version

--- a/app/src/main/res/layout/custom_action_editor.xml
+++ b/app/src/main/res/layout/custom_action_editor.xml
@@ -47,8 +47,7 @@
             android:hint="@string/custom_action_title"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true"/>
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -64,8 +63,7 @@
             android:hint="@string/start_command"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true"/>
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -81,8 +79,7 @@
             android:hint="@string/stop_command"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true"/>
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -105,8 +102,7 @@
             android:hint="@string/process_name"
             android:imeOptions="actionDone"
             android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true"/>
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
