--- a/app/src/main/res/layout/edit_text_dialog.xml
+++ b/app/src/main/res/layout/edit_text_dialog.xml
@@ -12,5 +12,5 @@
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="text"
-        android:singleLine="true"/>
+        android:maxLines="1"/>
 </LinearLayout>
