--- a/app/src/main/res/layout/export.xml
+++ b/app/src/main/res/layout/export.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
@@ -24,8 +24,7 @@
                 android:hint="@string/output_file_title"
                 android:imeOptions="actionDone"
                 android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"/>
+                android:maxLines="1"/>
 
         </android.support.design.widget.TextInputLayout>
 
