--- a/app/src/main/res/layout/activity_send_log.xml
+++ b/app/src/main/res/layout/activity_send_log.xml
@@ -30,8 +30,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/email_et"
@@ -40,8 +39,7 @@
             android:hint="@string/email_optional"
             android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true"/>
+            android:maxLines="1"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -59,27 +57,36 @@
         android:id="@+id/extra_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="textMultiLine"
         android:lines="2"
         android:maxLines="2"/>
 
+    <ProgressBar
+        android:id="@+id/reportProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="5dp"
+        android:visibility="visible"/>
+
     <TextView
+        android:id="@+id/console"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/console"
-        android:background="@color/colorPrimary"
-        android:textColor="?android:attr/textColorPrimary"
-        android:nestedScrollingEnabled="true"
-        android:layout_marginTop="8dp"
-        android:textSize="10sp"
         android:layout_weight="1"
-        android:scrollHorizontally="true"
-        android:saveEnabled="true"
+        android:background="@color/colorPrimary"
+        android:nestedScrollingEnabled="true"
         android:padding="3dp"
+        android:saveEnabled="true"
+        android:scrollHorizontally="true"
         android:scrollIndicators="right"
         android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="10sp"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -95,26 +102,18 @@
             android:onClick="onRestart"/>
 
         <Button
+            android:id="@+id/sendEmailBtn"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/use_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/useEmail"
-            android:onClick="onUseEmail"/>
+            android:enabled="false"
+            android:onClick="onUseEmail"
+            android:text="@string/use_email"/>
 
         <FrameLayout
             android:id="@+id/send_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <Button
-                android:id="@+id/start"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:onClick="onSend"
-                android:text="@string/send_report"
-                android:visibility="visible"/>
 
             <ProgressBar
                 android:id="@+id/progress"
@@ -131,6 +130,16 @@
                 android:padding="5dp"
                 android:visibility="gone"
                 app:srcCompat="@drawable/done_drawable"/>
+
+            <Button
+                android:id="@+id/sendBtn"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:enabled="false"
+                android:onClick="onSend"
+                android:text="@string/send_report"
+                android:visibility="visible"/>
         </FrameLayout>
 
     </LinearLayout>
