--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
@@ -24,8 +24,7 @@
                 android:hint="@string/path_to_cap"
                 android:imeOptions="actionNext"
                 android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"/>
+                android:maxLines="1"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -44,7 +43,7 @@
         android:orientation="horizontal">
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
@@ -54,8 +53,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/path_to_wordlist"
                 android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true"/>
+                android:maxLines="1"/>
 
         </android.support.design.widget.TextInputLayout>
 
