--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -90,7 +90,7 @@
             android:orientation="horizontal">
 
             <android.support.design.widget.TextInputLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
