Start tasks using executeOnExecutor() instead of execute() (this fixes Reaver not starting), use AsyncTask in CrackFragment and CustomActionFragment

--- a/app/src/main/res/layout/mdk_fragment.xml
+++ b/app/src/main/res/layout/mdk_fragment.xml
@@ -92,7 +92,8 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:paddingStart="5dp">
 
                 <EditText
                     android:id="@+id/ssid_file"
