--- a/app/src/main/res/layout/activity_send_log.xml
+++ b/app/src/main/res/layout/activity_send_log.xml
@@ -27,23 +27,28 @@
         android:layout_below="@+id/textView"
         android:text="@string/unexpected_error_message" />
 
-    <TextView
-        android:id="@+id/console"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_above="@+id/sendEmailBtn"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
-        android:nestedScrollingEnabled="true"
-        android:padding="3dp"
-        android:saveEnabled="true"
-        android:scrollHorizontally="true"
-        android:scrollIndicators="right"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbars="vertical"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="10sp" />
+        android:background="@color/colorPrimary">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/console"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="3dp"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="10sp" />
+        </LinearLayout>
+    </ScrollView>
 
     <ProgressBar
         android:id="@+id/reportProgressBar"
