--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -126,19 +126,21 @@
             android:layout_weight="1"/>
     </RadioGroup>
 
-    <TextView
+    <ScrollView
+        android:id="@+id/console_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/console"
-        android:background="@color/colorPrimary"
-        android:textColor="?android:attr/textColorPrimary"
-        android:nestedScrollingEnabled="true"
-        android:layout_marginTop="5dp"
-        android:padding="3dp"
-        android:fontFamily="serif-monospace"
-        android:textSize="10sp"
         android:layout_weight="1"
-        android:scrollHorizontally="true"/>
+        android:background="@color/colorPrimary"
+        android:padding="3dp">
+
+        <TextView
+            android:id="@+id/console"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="10sp" />
+    </ScrollView>
 
     <Button
         style="?android:attr/buttonBarButtonStyle"
