--- a/app/src/main/res/layout/reaver_fragment.xml
+++ b/app/src/main/res/layout/reaver_fragment.xml
@@ -7,76 +7,83 @@
               android:focusableInTouchMode="true"
               android:padding="5dp">
 
-    <Button
-        style="?android:attr/buttonBarButtonStyle"
-        android:text="@string/select_ap"
+    <LinearLayout
+        android:id="@+id/options_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/select_ap"/>
+        android:orientation="vertical">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/pin_delay"
+        <Button
+            android:id="@+id/select_ap"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/pin_delay"
-            android:imeOptions="actionNext"
-            android:inputType="number"
-            android:maxLines="1"
-            android:text="1"/>
+            android:text="@string/select_ap" />
 
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/pin_delay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/pin_delay"
+                android:imeOptions="actionNext"
+                android:inputType="number"
+                android:maxLines="1"
+                android:text="1" />
 
-        <EditText
-            android:id="@+id/locked_delay"
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/locked_delay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/locked_delay"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLines="1"
+                android:text="60" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/pixie_dust"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/locked_delay"
-            android:imeOptions="actionDone"
-            android:inputType="number"
-            android:maxLines="1"
-            android:text="60"/>
+            android:checked="false"
+            android:text="@string/pixie_dust" />
 
-    </android.support.design.widget.TextInputLayout>
+        <CheckBox
+            android:id="@+id/ignore_locked"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ignore_locked" />
 
-    <CheckBox
-        android:text="@string/pixie_dust"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/pixie_dust"
-        android:checked="false"
-        />
+        <CheckBox
+            android:id="@+id/eap_fail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/eap_fail" />
 
-    <CheckBox
-        android:text="@string/ignore_locked"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ignore_locked"/>
+        <CheckBox
+            android:id="@+id/small_dh"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/small_dh" />
 
-    <CheckBox
-        android:text="@string/eap_fail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/eap_fail"/>
+        <CheckBox
+            android:id="@+id/no_nack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/no_nack" />
 
-    <CheckBox
-        android:text="@string/small_dh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/small_dh"/>
-
-    <CheckBox
-        android:text="@string/no_nack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/no_nack"/>
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/console_scroll_view"
