--- a/app/src/main/res/layout/filters.xml
+++ b/app/src/main/res/layout/filters.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:padding="10dp"
-    android:id="@+id/filterll1">
+    android:padding="10dp">
 
     <CheckBox
         android:text="@string/show_ap"
@@ -35,7 +34,6 @@
         android:text="@string/channels"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:padding="5dp" />
