Fix cracking speed, add aircrack-ng speed test, update version to v1.5-beta.2

--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -152,11 +152,26 @@
             android:textSize="10sp" />
     </ScrollView>
 
-    <Button
-        style="?android:attr/buttonBarButtonStyle"
-        android:text="@string/start"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/start"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/speed_test_btn"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/speed_test" />
+
+        <Button
+            android:id="@+id/start"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/start" />
+
+    </LinearLayout>
 
 </LinearLayout>
