Fix possible bugs with 5Ghz support, rework console-like fragments, other minor code fixes, update version

--- a/app/src/main/res/layout/crack_fragment.xml
+++ b/app/src/main/res/layout/crack_fragment.xml
@@ -162,6 +162,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:lines="1"
             android:text="@string/speed_test" />
 
         <Button
